Add html layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 </head>
 
 <body>
+    <div class="container">
+
+        <div class="gameHeader">
+            <h2 id="gameTitle">
+                Space and Solar System Word Guess
+            </h2>
+            <h3 id="gameInstructions">Press any key to start the game</h3>
+        </div>
+
+        <div class="currentWord"></div>
+
+        <div class="user-score">
+            <h3>Letters Already Guessed</h3>
+            <div class="userGuessLetters"></div>
+            <h3>Number of Guesses Remaining: <span id="numberOfGuesses">12</span> </h3>
+            <h3>Wins: <span id="userWinsCounter">0</span></h3>
+            <h3>Loses: <span id="userLosesCounter">0</span></h3>
+        </div>
+
+    </div>
 
     <script src="assets/javascript/game.js"></script>
 </body>
