--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Guess Word Game</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
         <div class="gameHeader">
             <h2 id="gameTitle">
-                Space and Solar System Word Guess
+                Space and Solar System <br> Word Guess
             </h2>
             <h3 id="gameInstructions">Press any key to start the game</h3>
         </div>
