Add style to game instructions header and guess word section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             <h3 id="gameInstructions">Press any key to start the game</h3>
         </div>
 
-        <div class="currentWord"></div>
+        <div class="guessWord">
+            <h3>Current Word: </h3>
+            <div id="currentWord">
+                <div>a</div>
+                <div>_</div>
+                <div>B</div>
+                <div>_</div>
+                <div>_</div>
+                <div>h</div>
+            </div>
+        </div>
 
         <div class="user-score">
             <h3>Letters Already Guessed</h3>
