Add style to guess letters and score sections

--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
             </div>
         </div>
 
-        <div class="user-score">
+        <div class="guessLetters">
             <h3>Letters Already Guessed</h3>
-            <div class="userGuessLetters"></div>
+            <div class="userGuessLetters">
+                <div>A</div>
+                <div>b</div>
+                <div>c</div>
+                <div>z</div>
+            </div>
+        </div>
+
+        <div class="userScore">
             <h3>Number of Guesses Remaining: <span id="numberOfGuesses">12</span> </h3>
             <h3>Wins: <span id="userWinsCounter">0</span></h3>
             <h3>Loses: <span id="userLosesCounter">0</span></h3>
