Add condition for wrong guesses

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="guessLetters">
             <h3>Letters Already Guessed</h3>
-            <div class="userGuessLetters">
+            <div id="userGuessLetters">
                 <div>A</div>
                 <div>b</div>
                 <div>c</div>
