Add style to game title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap">
+    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Bungee+Shade&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 
         <div class="gameHeader">
             <h2 id="gameTitle">
-                Space and Solar System <br> Word Guess
+                Solar System <br> Word Guess
             </h2>
             <h3 id="gameInstructions">Press any key to start the game</h3>
         </div>
