--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         <div class="userScore">
             <h3>Number of Guesses Remaining: <span id="numberOfGuesses">12</span> </h3>
-            <h3>Wins: <span id="userWinsCounter">0</span></h3>
-            <h3>Loses: <span id="userLosesCounter">0</span></h3>
+            <h3>Wins: <span id="winsCounter">0</span></h3>
+            <h3>Loses: <span id="losesCounter">0</span></h3>
         </div>
 
     </div>
