Add sound effects to keypress event

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap">
-    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Bungee+Shade&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Bungee+Shade&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -45,6 +46,9 @@
             <h3>Wins: <span id="winsCounter">0</span></h3>
             <h3>Loses: <span id="losesCounter">0</span></h3>
         </div>
+
+        <audio id="correctSound" src="./assets/sounds/correct.wav"></audio>
+        <audio id="wrongSound" src="./assets/sounds/wrong.mp3"></audio>
 
     </div>
 
