--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     </div>
 
-    <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/index.js"></script>
 </body>
 
 </html>
