--- a/index.html
+++ b/index.html
@@ -1,59 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Guess Word Game</title>
-    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap">
-    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Bungee+Shade&display=swap"
-        rel="stylesheet">
-</head>
-
-<body>
-    <div class="container">
-
-        <div class="gameHeader">
-            <h2 id="gameTitle">
-                Solar System <br> Word Guess
-            </h2>
-            <h3 id="gameInstructions">Press any key to start the game</h3>
-        </div>
-
-        <div class="guessWord">
-            <h3>Current Word: </h3>
-            <div id="currentWord">
-                <div>a</div>
-                <div>_</div>
-                <div>B</div>
-                <div>_</div>
-                <div>_</div>
-                <div>h</div>
-            </div>
-        </div>
-
-        <div class="guessLetters">
-            <h3>Letters Already Guessed</h3>
-            <div id="userGuessLetters">
-            </div>
-        </div>
-
-        <div class="userScore">
-            <h3>Number of Guesses Remaining: <span id="numberOfGuesses">12</span> </h3>
-            <h3>Wins: <span id="winsCounter">0</span></h3>
-            <h3>Loses: <span id="losesCounter">0</span></h3>
-        </div>
-
-        <audio id="correctSound" src="./assets/sounds/correct.wav"></audio>
-        <audio id="wrongSound" src="./assets/sounds/wrong.mp3"></audio>
-
-    </div>
-
-    <script src="index.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="ie=edge"><title>Guess Word Game</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Nunito&display=swap"><link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Bungee+Shade&display=swap" rel=stylesheet><script defer=defer src=main.159cf51197.js></script><link href=main.62c5f990ac.css rel=stylesheet></head><body><div class=container><div class=gameHeader><h2 id=gameTitle>Solar System<br>Word Guess</h2><h3 id=gameInstructions>Press any key to start the game</h3></div><div class=guessWord><h3>Current Word:</h3><div id=currentWord><div>a</div><div>_</div><div>B</div><div>_</div><div>_</div><div>h</div></div></div><div class=guessLetters><h3>Letters Already Guessed</h3><div id=userGuessLetters></div></div><div class=userScore><h3>Number of Guesses Remaining: <span id=numberOfGuesses>12</span></h3><h3>Wins: <span id=winsCounter>0</span></h3><h3>Loses: <span id=losesCounter>0</span></h3></div><audio id=correctSound src=./assets/sounds/correct.wav></audio><audio id=wrongSound src=./assets/sounds/wrong.mp3></audio></div></body></html>
